--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsc",
   "version": "0.0.1",
   "description": "Babel Plugin for Compiling JavaScript Code Structures",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
