--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/GDenisC/jsc#readme",
   "dependencies": {
-    "@babel/parser": "^7.26.3"
+    "@babel/parser": "^7.26.3",
+    "@babel/traverse": "^7.26.4",
+    "@babel/types": "^7.26.3"
   }
 }
