--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "jsc",
   "version": "0.0.1",
   "description": "Babel Plugin for Compiling JavaScript Code Structures",
-  "main": "src/index.js",
+  "main": "src/test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node src/test.js"
   },
   "repository": {
     "type": "git",
