--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Babel Plugin for Compiling JavaScript Code Structures",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests/plugin.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/GDenisC/jsc#readme",
   "dependencies": {
+    "@babel/core": "^7.26.0",
     "@babel/parser": "^7.26.3",
     "@babel/traverse": "^7.26.4",
     "@babel/types": "^7.26.3"
