--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Babel Plugin for Compiling JavaScript Code Structures",
   "main": "src/index.js",
   "scripts": {
-    "test": "node tests/plugin.js"
+    "test": "node tests/all.js"
   },
   "repository": {
     "type": "git",
